--- a/Source/SCIT1thProject/bin/View/Calendar.fxml
+++ b/Source/SCIT1thProject/bin/View/Calendar.fxml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.effect.*?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,9 +15,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="426.0" prefWidth="612.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.CalendarController">
+<AnchorPane fx:id="calendarPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.CalendarController">
    <children>
-      <GridPane fx:id="gridPane" layoutX="6.0" layoutY="46.0" prefHeight="366.0" prefWidth="600.0">
+      <GridPane fx:id="gridPane" gridLinesVisible="true" layoutX="6.0" layoutY="40.0" prefHeight="550.0" prefWidth="870.0" style="-fx-background-color: white; -fx-border-color: black;">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -29,32 +36,32 @@
           <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label alignment="CENTER" prefHeight="48.0" prefWidth="124.0" styleClass="days" stylesheets="@CalendarStyle.css" text="월" GridPane.columnIndex="1">
+            <Label alignment="CENTER" prefHeight="90.0" prefWidth="130.0" styleClass="days" stylesheets="@CalendarStyle.css" text="월" GridPane.columnIndex="1">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" prefHeight="101.0" prefWidth="85.0" styleClass="sunday" stylesheets="@CalendarStyle.css" text="일">
+            <Label alignment="CENTER" prefHeight="90.0" prefWidth="130.0" styleClass="sunday" stylesheets="@CalendarStyle.css" text="일">
                <font>
                   <Font size="15.0" />
                </font></Label>
-            <Label alignment="CENTER" prefHeight="50.0" prefWidth="86.0" styleClass="days" stylesheets="@CalendarStyle.css" text="화" GridPane.columnIndex="2">
+            <Label alignment="CENTER" prefHeight="90.0" prefWidth="130.0" styleClass="days" stylesheets="@CalendarStyle.css" text="화" GridPane.columnIndex="2">
                <font>
                   <Font size="15.0" />
                </font></Label>
-            <Label alignment="CENTER" prefHeight="53.0" prefWidth="110.0" styleClass="days" stylesheets="@CalendarStyle.css" text="수" GridPane.columnIndex="3">
+            <Label alignment="CENTER" prefHeight="90.0" prefWidth="130.0" styleClass="days" stylesheets="@CalendarStyle.css" text="수" GridPane.columnIndex="3">
                <font>
                   <Font size="15.0" />
                </font></Label>
-            <Label alignment="CENTER" prefHeight="27.0" prefWidth="91.0" styleClass="days" stylesheets="@CalendarStyle.css" text="목" GridPane.columnIndex="4">
+            <Label alignment="CENTER" prefHeight="90.0" prefWidth="130.0" styleClass="days" stylesheets="@CalendarStyle.css" text="목" GridPane.columnIndex="4">
                <font>
                   <Font size="15.0" />
                </font></Label>
-            <Label alignment="CENTER" prefHeight="96.0" prefWidth="127.0" styleClass="days" stylesheets="@CalendarStyle.css" text="금" GridPane.columnIndex="5">
+            <Label alignment="CENTER" prefHeight="90.0" prefWidth="130.0" styleClass="days" stylesheets="@CalendarStyle.css" text="금" GridPane.columnIndex="5">
                <font>
                   <Font size="15.0" />
                </font></Label>
-            <Label alignment="CENTER" prefHeight="80.0" prefWidth="86.0" styleClass="saturday" stylesheets="@CalendarStyle.css" text="토" GridPane.columnIndex="6">
+            <Label alignment="CENTER" prefHeight="80.0" prefWidth="130.0" styleClass="saturday" stylesheets="@CalendarStyle.css" text="토" GridPane.columnIndex="6">
                <font>
                   <Font size="15.0" />
                </font></Label>
@@ -62,6 +69,35 @@
          <padding>
             <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
          </padding>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
       </GridPane>
+      <MenuBar prefHeight="25.0" prefWidth="1200.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="프로그램">
+            <items>
+                  <MenuItem mnemonicParsing="false" onAction="#btnLogout" text="로그아웃" />
+              <MenuItem mnemonicParsing="false" onAction="#btnExitAction" text="프로그램 종료" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="회원">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#btnMemCorrect" text="회원정보 수정" />
+                  <Menu mnemonicParsing="false" text="가계부">
+                    <items>
+                      <MenuItem mnemonicParsing="false" text="가계부 설정" />
+                        <MenuItem mnemonicParsing="false" onAction="#btnHhManage" text="가계부 관리" />
+                    </items>
+                  </Menu>
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="도움말">
+            <items>
+              <MenuItem mnemonicParsing="false" text="프로그램 도움말" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
    </children>
 </AnchorPane>
