--- a/Source/SCIT1thProject/bin/View/Calendar.fxml
+++ b/Source/SCIT1thProject/bin/View/Calendar.fxml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.effect.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="calendarPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.CalendarController">
+<AnchorPane fx:id="calendarPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.CalendarController">
    <children>
       <GridPane fx:id="gridPane" gridLinesVisible="true" layoutX="6.0" layoutY="40.0" prefHeight="550.0" prefWidth="870.0" style="-fx-background-color: white; -fx-border-color: black;">
         <columnConstraints>
@@ -70,7 +67,7 @@
             <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
          </padding>
          <opaqueInsets>
-            <Insets />
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </opaqueInsets>
       </GridPane>
       <MenuBar prefHeight="25.0" prefWidth="1200.0">
@@ -99,5 +96,29 @@
           </Menu>
         </menus>
       </MenuBar>
+      <Button fx:id="monthAfter" layoutX="1121.0" layoutY="105.0" mnemonicParsing="false" text="&gt;&gt;" />
+      <Button fx:id="yearAfter" layoutX="1121.0" layoutY="65.0" mnemonicParsing="false" text="&gt;&gt;" />
+      <Button fx:id="yearBefore" layoutX="924.0" layoutY="65.0" mnemonicParsing="false" text="&lt;&lt;" />
+      <Button fx:id="monthBefore" layoutX="924.0" layoutY="105.0" mnemonicParsing="false" text="&lt;&lt;" />
+      <Label fx:id="year" alignment="CENTER" layoutX="971.0" layoutY="58.0" prefHeight="32.0" prefWidth="136.0">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label fx:id="month" alignment="CENTER" layoutX="971.0" layoutY="101.0" prefHeight="32.0" prefWidth="136.0">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="1078.0" layoutY="64.0" text="년">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="1078.0" layoutY="104.0" text="월">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
