--- a/Source/SCIT1thProject/bin/View/MakeMember.fxml
+++ b/Source/SCIT1thProject/bin/View/MakeMember.fxml
@@ -20,19 +20,14 @@
 	<children>
 		<MenuBar prefHeight="25.0" prefWidth="600.0">
 			<menus>
-				<Menu mnemonicParsing="false" text="File">
+				<Menu mnemonicParsing="false" text="프로그램">
 					<items>
-						<MenuItem mnemonicParsing="false" text="Close" />
+						<MenuItem mnemonicParsing="false" onAction="#btnActionExit" text="프로그램 종료" />
 					</items>
 				</Menu>
-				<Menu mnemonicParsing="false" text="Edit">
+				<Menu mnemonicParsing="false" text="도움말">
 					<items>
-						<MenuItem mnemonicParsing="false" text="Delete" />
-					</items>
-				</Menu>
-				<Menu mnemonicParsing="false" text="Help">
-					<items>
-						<MenuItem mnemonicParsing="false" text="About" />
+						<MenuItem mnemonicParsing="false" text="프로그램 도움말" />
 					</items>
 				</Menu>
 			</menus>
