--- a/Source/SCIT1thProject/src/View/HouseHold.fxml
+++ b/Source/SCIT1thProject/src/View/HouseHold.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -13,7 +17,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.HouseHoldController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.HouseHoldController">
    <right>
       <AnchorPane prefHeight="400.0" prefWidth="165.0" BorderPane.alignment="CENTER">
          <children>
@@ -41,6 +45,12 @@
             </GridPane>
             <Button fx:id="delete" layoutX="16.0" layoutY="291.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="131.0" text="삭제" />
             <Button fx:id="fix" layoutX="15.0" layoutY="325.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="131.0" text="수정" />
+            <Label layoutX="16.0" layoutY="390.0" text="총 소비금액" />
+            <Label layoutX="16.0" layoutY="464.0" text="총 저축금액" />
+            <Label layoutX="14.0" layoutY="543.0" text="총 잔액" />
+            <Label fx:id="seeSpentAll" layoutX="14.0" layoutY="426.0" text="금액1" />
+            <Label fx:id="seeSaveAll" layoutX="14.0" layoutY="503.0" text="금액2" />
+            <Label fx:id="seeBalanceAll" layoutX="14.0" layoutY="579.0" text="금액3" />
          </children>
       </AnchorPane>
    </right>
@@ -50,7 +60,8 @@
    <top>
       <AnchorPane prefHeight="41.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <ComboBox layoutX="436.0" layoutY="8.0" prefWidth="150.0" />
+            <DatePicker layoutX="152.0" layoutY="4.0" prefHeight="33.0" prefWidth="181.0" />
+            <DatePicker layoutX="374.0" layoutY="8.0" prefHeight="33.0" prefWidth="177.0" />
          </children>
          <opaqueInsets>
             <Insets />
