--- a/Source/SCIT1thProject/src/View/HouseHold.fxml
+++ b/Source/SCIT1thProject/src/View/HouseHold.fxml
@@ -17,12 +17,15 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.HouseHoldController">
-   <right>
-      <AnchorPane prefHeight="400.0" prefWidth="165.0" BorderPane.alignment="CENTER">
+
+<AnchorPane prefHeight="679.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.HouseHoldController">
+   <children>
+      <DatePicker fx:id="FromDate" layoutX="528.0" layoutY="67.0" prefHeight="30.0" prefWidth="170.0" />
+      <DatePicker fx:id="ToDate" layoutX="730.0" layoutY="67.0" prefHeight="30.0" prefWidth="170.0" />
+      <AnchorPane layoutX="900.0" prefHeight="680.0" prefWidth="300.0">
          <children>
-            <Button fx:id="add" layoutX="16.0" layoutY="255.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="131.0" text="추가" />
-            <GridPane layoutX="16.0" layoutY="14.0">
+            <Button fx:id="add" layoutX="15.0" layoutY="426.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="274.0" text="추가" />
+            <GridPane layoutX="16.0" layoutY="118.0" prefHeight="294.0" prefWidth="274.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
                </columnConstraints>
@@ -43,29 +46,47 @@
                   <TextArea fx:id="content" prefHeight="137.0" prefWidth="129.0" GridPane.rowIndex="5" />
                </children>
             </GridPane>
-            <Button fx:id="delete" layoutX="16.0" layoutY="291.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="131.0" text="삭제" />
-            <Button fx:id="fix" layoutX="15.0" layoutY="325.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="131.0" text="수정" />
-            <Label layoutX="16.0" layoutY="390.0" text="총 소비금액" />
-            <Label layoutX="16.0" layoutY="464.0" text="총 저축금액" />
-            <Label layoutX="14.0" layoutY="543.0" text="총 잔액" />
-            <Label fx:id="seeSpentAll" layoutX="14.0" layoutY="426.0" text="금액1" />
-            <Label fx:id="seeSaveAll" layoutX="14.0" layoutY="503.0" text="금액2" />
-            <Label fx:id="seeBalanceAll" layoutX="14.0" layoutY="579.0" text="금액3" />
+            <Button fx:id="delete" layoutX="15.0" layoutY="462.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="274.0" text="삭제" />
+            <Button fx:id="fix" layoutX="14.0" layoutY="496.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="274.0" text="수정" />
+            <Label layoutX="15.0" layoutY="532.0" text="소비 금액" />
+            <Label layoutX="15.0" layoutY="572.0" text="저축 금액" />
+            <Label layoutX="15.0" layoutY="614.0" text="총 재산" />
+            <TextField fx:id="showSpend" layoutX="74.0" layoutY="530.0" />
+            <TextField fx:id="showSave" layoutX="74.0" layoutY="570.0" />
+            <TextField fx:id="showTotalmoney" layoutX="74.0" layoutY="610.0" />
+            <Label layoutX="213.0" layoutY="534.0" text="원" />
+            <Label layoutX="213.0" layoutY="574.0" text="원" />
+            <Label layoutX="213.0" layoutY="613.0" text="원" />
          </children>
       </AnchorPane>
-   </right>
-   <center>
-      <ListView fx:id="contentList" prefHeight="400.0" prefWidth="375.0" BorderPane.alignment="CENTER" />
-   </center>
-   <top>
-      <AnchorPane prefHeight="41.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <children>
-            <DatePicker layoutX="152.0" layoutY="4.0" prefHeight="33.0" prefWidth="181.0" />
-            <DatePicker layoutX="374.0" layoutY="8.0" prefHeight="33.0" prefWidth="177.0" />
-         </children>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-      </AnchorPane>
-   </top>
-</BorderPane>
+      <Label layoutX="707.0" layoutY="75.0" text="~" />
+      <TableView fx:id="showHouseHold" layoutY="115.0" prefHeight="564.0" prefWidth="900.0">
+        <columns>
+          <TableColumn prefWidth="93.0" text="물품명" />
+          <TableColumn prefWidth="86.0" text="가격" />
+            <TableColumn prefWidth="113.0" text="날짜" />
+            <TableColumn prefWidth="607.0" text="상세내역" />
+        </columns>
+      </TableView>
+      <Label layoutX="456.0" layoutY="68.0" prefHeight="30.0" prefWidth="64.0" text="기간 검색 :" />
+      <MenuBar layoutY="-1.0" prefHeight="25.0" prefWidth="1200.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Close" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Edit">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Delete" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem mnemonicParsing="false" text="About" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+   </children>
+</AnchorPane>
